# ZipUnicode

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_zipu.py
zip_unicode/: __init__.py  main.py
