[build-system]
requires = ["setuptools>=61.0", "chardet"]
build-backend = "setuptools.build_meta"

[project]
name = "ZipUnicode"
authors = [
    {name = "Nguyen Ba Duc Tin", email = "nguyenbaduc.tin@gmail.com"},
]
description = "Fix unreadable file names when extracting zip file"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
dependencies = [
    'chardet>=3.0.0',
]
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: End Users/Desktop',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Debuggers',
        'Topic :: Home Automation',
        'Topic :: Office/Business',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Scientific/Engineering :: Information Analysis',
        'Topic :: Utilities'
    ]
dynamic = ["version"]

[project.scripts]
zipu = "zip_unicode.main:entry_point"

[project.urls]
homepage = "https://github.com/Dragon2fly/ZipUnicode"

[tool.setuptools]
packages = ["zip_unicode"]

[tool.setuptools.dynamic]
version = {attr = "zip_unicode.__version__"}
